colocando pag no ar

--- a/01-barras-semjs-semsvg.html
+++ b/01-barras-semjs-semsvg.html
@@ -14,11 +14,11 @@
       color: white;
     }
 
-    /* Seletores dinâmicos: */
-/*     .chart div:hover {
+     /*Seletores dinâmicos: */
+     .chart div:hover {
       background-color: yellow;
       color: steelblue;
-    } */
+    }
   </style>
 </head>
 
