--- a/04-formas-svg.html
+++ b/04-formas-svg.html
@@ -6,10 +6,10 @@
         <script src="https://d3js.org/d3.v4.min.js"></script>
     </head>
     <body>
-        <svg width="250" height="150">
-          <rect x="0" y="0" width="250" height="150" fill="#009c3b" />
-          <polygon points="" fill="#ffdf00" />
-          <circle cy="30" cx="86" r="30" fill="#002776" />
+        <svg width="500" height="300">
+          <rect x="0" y="0" width="500" height="300" fill="#009c3b" />
+          <polygon points="480,150 250,20 30,150 250,280" fill="#ffdf00" />
+          <circle cy="50%" cx="50%" r="80" fill="#002776" />
         </svg>
     </body>
 </html>
