--- a/03-dados-e-append.html
+++ b/03-dados-e-append.html
@@ -24,14 +24,16 @@
     </script>
 
 <!-- PARTE 2: dados -->
-<!--     <script type="text/javascript">
-      var dados = [2, 3, 5, 7, 11, 13, 17];
+    <script type="text/javascript">
+
+      var dados = [2, 3, 5, 7, 11, 13, 17,2];
       d3.select("#pros_dados") // #xpto == elemento com id xpto
         .selectAll("p")
       .data(dados)
       .enter()
         .append("p")
-        .text("Parágrafo criado a partir dos dados.") -->
+        .text(function(d) {return "Valor: " + d;})
+        .style("font-size",function(d){return 5*d + "px"});
     </script>
   </body>
 </html>
