--- a/07-barras-melhores.html
+++ b/07-barras-melhores.html
@@ -77,10 +77,15 @@
       /*
        * As escalas
        */
-      var x = d3.scaleBand(); // Configure essa escala com domain, range e padding
+      var x = d3.scaleBand()
+        .domain(dados.map((dado, indice) => dado.letra))
+        .range([0,500]) // Configure essa escala com domain, range e padding
+        .padding([0.2]);
 
-      var y = d3.scaleLinear() // Configure essa escala com domain e range
-                               // Lembre que uma escala pode converter de 1..10 -> 100..1
+      var y = d3.scaleLinear()
+        .domain([0,100])
+        .range([360,0]);// Configure essa escala com domain e range
+                      // Lembre que uma escala pode converter de 1..10 -> 100..1
 
       // === ATÉ DAQUI ===
 
