--- a/x03-detalhes-svg.html
+++ b/x03-detalhes-svg.html
@@ -16,11 +16,11 @@
       <div class="row">
         <br>
         <svg width=300 height=300>
-          <g>
-            <circle r="20" cx="200" cy = "200" fill-opacity="0.4"/>
+          <g transform="translate(200, 100)">
+            <circle r="20" fill-opacity="0.4"/>
             <text x="200" y = "200">Um rótulo</text>
           </g>
-          <g transform="translate(100,50)">
+          <g transform="translate(200,50)">
             <circle r="5" fill-opacity="0.4"/>
             <text>Outro rótulo</text>
           </g>
