--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         <li class="list-group-item"><a href="06-barras-simples.html">Gerando SVG com D3.</a></li>
         <li class="list-group-item"><a href="07-barras-melhores.html">Melhorando o gráfico de barras</a></li>
         <li class="list-group-item"><a href="08-carregando-dados.html">Acessando dados fora do js</a></li>
+        <li class="list-group-item"><a href="graficosimplesvertical.html">Gráfico simples na vertical</a></li>
       </ul>
     </div>
   </div>
